# web_avatar_sample

./: README.md
frontend/: .eslintignore  .eslintrc  .gitattributes  .gitignore  .prettierignore  config-overrides.js  package.json  tsconfig.docker.json  tsconfig.eslint.json  tsconfig.json
frontend/public/: animation01.json  animation04.json  animation05.json  index.html
frontend/src/: index.tsx  routes.tsx  util.ts
frontend/src/components/: chat.tsx  operation.tsx
frontend/src/domain/: animation.ts  avatar.ts  lipsync.ts  stage.ts  tracker.ts
frontend/src/domain/rtc/: RTCManager.ts  RTCPeer.ts
frontend/src/repository/: AnimationRepository.ts  AvatarRepository.ts  MLRepository.ts  MediaStreamRepository.ts
server/: .gitignore  CMakeLists.txt  Dockerfile  docker-compose.yml  env.h  main.cpp
server/app/: ws.cpp  ws.h
server/lib/: httpserver.cpp  httpserver.h  logger.h
